Renamed user endpoint to auth
