# src/api/handlers/auth.go
@@ -10,19 +10,19 @@ import (
 	"github.com/jaganathanb/dapps-api/services"
 )
 
-type UsersHandler struct {
-	service *services.UserService
+type AuthHandler struct {
+	service *services.AuthService
 }
 
-func NewUsersHandler(cfg *config.Config) *UsersHandler {
-	service := services.NewUserService(cfg)
-	return &UsersHandler{service: service}
+func NewAuthHandler(cfg *config.Config) *AuthHandler {
+	service := services.NewAuthService(cfg)
+	return &AuthHandler{service: service}
 }
 
 // LoginByUsername godoc
 // @Summary LoginByUsername
 // @Description LoginByUsername
-// @Tags Users
+// @Tags Auth
 // @Accept  json
 // @Produce  json
 // @Param version path int true "Version" Enums(1, 2) default(1)
@@ -30,8 +30,8 @@ func NewUsersHandler(cfg *config.Config) *UsersHandler {
 // @Success 201 {object} helper.BaseHttpResponse "Success"
 // @Failure 400 {object} helper.BaseHttpResponse "Failed"
 // @Failure 409 {object} helper.BaseHttpResponse "Failed"
-// @Router /v{version}/users/login-by-username [post]
-func (h *UsersHandler) LoginByUsername(c *gin.Context) {
+// @Router /v{version}/auth/login [post]
+func (h *AuthHandler) LoginByUsername(c *gin.Context) {
 	req := new(dto.LoginByUsernameRequest)
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
@@ -52,7 +52,7 @@ func (h *UsersHandler) LoginByUsername(c *gin.Context) {
 // RegisterByUsername godoc
 // @Summary RegisterByUsername
 // @Description RegisterByUsername
-// @Tags Users
+// @Tags Auth
 // @Accept  json
 // @Produce  json
 // @Param version path int true "Version" Enums(1, 2) default(1)
@@ -60,8 +60,8 @@ func (h *UsersHandler) LoginByUsername(c *gin.Context) {
 // @Success 201 {object} helper.BaseHttpResponse "Success"
 // @Failure 400 {object} helper.BaseHttpResponse "Failed"
 // @Failure 409 {object} helper.BaseHttpResponse "Failed"
-// @Router /v{version}/users/register-by-username [post]
-func (h *UsersHandler) RegisterByUsername(c *gin.Context) {
+// @Router /v{version}/auth/register [post]
+func (h *AuthHandler) RegisterByUsername(c *gin.Context) {
 	req := new(dto.RegisterUserByUsernameRequest)
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
@@ -82,7 +82,7 @@ func (h *UsersHandler) RegisterByUsername(c *gin.Context) {
 // RegisterLoginByMobileNumber godoc
 // @Summary RegisterLoginByMobileNumber
 // @Description RegisterLoginByMobileNumber
-// @Tags Users
+// @Tags Auth
 // @Accept  json
 // @Produce  json
 // @Param version path int true "Version" Enums(1, 2) default(1)
@@ -90,8 +90,8 @@ func (h *UsersHandler) RegisterByUsername(c *gin.Context) {
 // @Success 201 {object} helper.BaseHttpResponse "Success"
 // @Failure 400 {object} helper.BaseHttpResponse "Failed"
 // @Failure 409 {object} helper.BaseHttpResponse "Failed"
-// @Router /v{version}/users/login-by-mobile [post]
-func (h *UsersHandler) RegisterLoginByMobileNumber(c *gin.Context) {
+// @Router /v{version}/auth/login-m [post]
+func (h *AuthHandler) RegisterLoginByMobileNumber(c *gin.Context) {
 	req := new(dto.RegisterLoginByMobileRequest)
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
@@ -112,7 +112,7 @@ func (h *UsersHandler) RegisterLoginByMobileNumber(c *gin.Context) {
 // SendOtp godoc
 // @Summary Send otp to user
 // @Description Send otp to user
-// @Tags Users
+// @Tags Auth
 // @Accept  json
 // @Produce  json
 // @Param version path int true "Version" Enums(1, 2) default(1)
@@ -120,8 +120,8 @@ func (h *UsersHandler) RegisterLoginByMobileNumber(c *gin.Context) {
 // @Success 201 {object} helper.BaseHttpResponse "Success"
 // @Failure 400 {object} helper.BaseHttpResponse "Failed"
 // @Failure 409 {object} helper.BaseHttpResponse "Failed"
-// @Router /v{version}/users/send-otp [post]
-func (h *UsersHandler) SendOtp(c *gin.Context) {
+// @Router /v{version}/auth/send-otp [post]
+func (h *AuthHandler) SendOtp(c *gin.Context) {
 	req := new(dto.GetOtpRequest)
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
